# public_uasproject

./: README.md  ffmpeg_record_script.sh
findobjects_v1/fromcamera/: CMakeLists.txt  main.cpp  withrobot_camera.cpp  withrobot_camera.hpp
findobjects_v1/fromvideofile/: Makefile  README.md  Track.cpp  Track.hpp  format_converter.hpp  main.cpp
trackandclassify/: categories.txt  trk_15.cpp
trackandclassify/ddd_cropped/: ddd_cropped_deploy.prototxt  ddd_cropped_train_lmdb_mean_image.binaryproto
trackandclassify/ddd_path/: ddd_path_4x_107px_4min_deploy.prototxt  ddd_path_4x_107px_4min_iter_18000.caffemodel  ddd_path_4x_107px_4min_train_lmdb_mean_image.binaryproto
